--- a/public/index.css
+++ b/public/index.css
@@ -17,19 +17,21 @@
 
 }
 
-html,body{
+body{
     height: 100vh;
     background-image: linear-gradient(to left, var(--color1),white, var(--color1));
-}
-main{
     position: relative;
     height: 100vh;
-    width: 95vw;
-    
+    width: 100vw;
 }
-article{
+main{
+    
     background-color: white;
     position: absolute;
     margin: 0% 15%;
+    
+    
+}
+article{
     
 }
