--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 @import url(../assets/styles/Header.css);
+@import url(../assets/styles/body.css);
+@import url(../assets/styles/footer.css);
 
 /*Configuração geral*/
 :root{
@@ -17,21 +19,3 @@
 
 }
 
-body{
-    height: 100vh;
-    background-image: linear-gradient(to left, var(--color1),white, var(--color1));
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-}
-main{
-    
-    background-color: white;
-    position: absolute;
-    margin: 0% 15%;
-    
-    
-}
-article{
-    
-}
