--- a/assets/styles/body.css
+++ b/assets/styles/body.css
@@ -1,62 +1,17 @@
-body {
+@import url(Header.css);
+@import url(section-about-me.css);
+
+/*Configurações gerais do Body*/
+body,html {
     height: 100vh;
+    width: 100%;
     background-image: linear-gradient(to left, var(--color1), white, var(--color1));
-    position: relative;
-    height: 100vh;
-    width: 100vw;
+    
+    
 }
 
 main {
 
     background-color: white;
-    position: absolute;
     margin: 0% 15%;
-
-
 }
-
-
-section.about-me-section {
-    height: 40%;
-    width: 80%;
-    margin: auto;
-    
-
-
-}
-section.about-me-section>.conteiner {
-    display: flex;
-    justify-content: space-between; 
-    padding: 50px;
-    justify-content: flex-end;
-}
-
-.quote {
-    width: 20%;
-    border: 3px solid green;
-}
-
-.me-img {
-    justify-content: flex-end;
-
-
-    border: 3px solid green;
-}
-
-.about-me {
-    
-    border: 3px solid green;
-    width: 40%;
-
-}
-
-
-
-
-@media screen and (max-width:620px) {
-    section.about-me-section>.conteiner {
-        display: block;
-        padding: 20px;
-
-
-    }
