--- a/assets/styles/menu-bottom.css
+++ b/assets/styles/menu-bottom.css
@@ -1,67 +1,90 @@
-#menu-bottom{
-    background-color: var(--color1);
-    padding: 1em;
-
-    justify-content: center;
-}
-#nav-menu li{
-    display: inline;
-    padding: 5px;   
-   
-}
-#burguer{
-    display: none;
-}
-
-
 @media screen and (max-width: 768px) {
-    #burguer{
+    #itens {
+        background-color: var(--color1);
+        display: none;
+        transition: ease 2s;
+
+    }
+
+    #burguer {
         display: block;
         color: white;
+        background-color: var(--color1);
         padding: .5em;
         cursor: pointer;
     }
-    #itens{
-        display: none;
-    }
-    #burguer:hover{
+
+    #burguer:hover {
         background-color: white;
         color: var(--color1);
         transition: .6s;
-    }
-    #nav-menu li {
-        display: block;
-        list-style: none;
-        border-top: 1px solid white  ;
-        padding: .5em;   
-       
-    }
-    #nav-menu a {
-        display: block;
-        padding: .5em;
-        width: 100%;
-       
-    }
-    #nav-menu a:hover{
-        background-color: white;
-        color: var(--color1);
-        transition: .6s;
-        
     }
 
-    
+    #itens li {
+        list-style: none;
+    }
+
+    #itens a {
+
+        display: block;
+        border-top: 1px solid white;
+        padding: .5em;
+        color: white;
+        text-decoration: none;
+        transition: ease .5s;
+
+    }
+
+    #itens a:hover {
+        background-color: rgba(255, 255, 255, 0.808);
+        color: var(--color1);
+        box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.384);
+        transition: ease .5s;
+
+    }
+
+
 }
-#nav-menu a{
-    padding: .5em;
-    
-   
-}
-#nav-menu a:hover{
-    border-radius: 10px;
-    border: 2px solid var(--color1);
-    background-color: white;
-    color: var(--color1);
-}
-#burguer{
-    background-color: var(--color1);
+
+@media screen and (min-width:768px) {
+    #burguer {
+        display: none;
+    }
+
+    #itens {
+        width: 100%;
+        padding: 1.2em;
+        margin-top: 1em;
+        background-color: var(--color1);
+        justify-content: center;
+
+
+    }
+
+
+    #itens li {
+        margin: 0em 1em;
+        display: inline;
+        border-radius: 30px;
+        
+        
+        list-style: none;
+    }
+    #itens a{
+        padding: 1em;
+        color: white;
+        text-decoration: none;
+        transition: ease .5s;
+    }
+
+    #itens a:hover {
+
+        background-color: white;
+        color: var(--color1);
+        padding: .8em;
+        border-radius: 40%;
+        box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.384);
+
+        transition: ease .5s;
+    }
 }
