--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
-@import url(../assets/styles/body.css);
-@import url(../assets/styles/footer.css);
+@import url(assets/styles/body.css);
+@import url(assets/styles/footer.css);
 
 /*Configuração geral*/
 
