--- a/assets/styles/section-about-me.css
+++ b/assets/styles/section-about-me.css
@@ -3,7 +3,7 @@
 
 /*Mobile Version*/
 @media screen and (max-width:768px) {
-    section#about-me>.conteiner {
+    section#about-me-section>.conteiner {
         display: flex;
         flex-wrap: wrap;
         margin: auto;
@@ -14,11 +14,11 @@
         background-size: cover;
         background-attachment: fixed;        
     }
-    section#about-me>.conteiner>.me-img {
+    section#about-me-section.conteiner>.me-img {
         text-align: center;
         width: 100%;
     }
-    section#about-me>.conteiner>.quote {
+    section#about-me-section>.conteiner>.quote {
         background-color: rgba(2, 2, 2, 0.281);
         color: white;
         box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.568);
@@ -26,18 +26,18 @@
         border-radius: 15px;
     }
     
-    section#about-me>.conteiner>.about-me {
+    section#about-me-section>.conteiner>.about-me {
         background-color: rgba(2, 2, 2, 0.281);
         color: white;
         box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.568);
         padding: 5px;
         border-radius: 15px;
     }
-    section#about-me>.conteiner>.about-me h2, p {
+    section#about-me-section>.conteiner>.about-me h2, p {
         font-family: var(--font3);
         line-height: 1.3em;
     }
-    section#about-me>.conteiner P {
+    section#about-me-section>.conteiner P {
         text-indent: 20px;
         line-height: 1.2em;
     }
@@ -46,7 +46,7 @@
 @media screen and (min-width: 768px) and (max-width: 1500px) {
   
 
-    section#about-me>.conteiner {
+    section#about-me-section>.conteiner {
         display: flex;
         flex-direction: column;
         margin: auto;
@@ -57,36 +57,36 @@
         background-size: cover;
         background-attachment: fixed;       
     }
-    section#about-me>.conteiner>.me-img {
+    section#about-me-section>.conteiner>.me-img {
         text-align: center;
         width: 100%;
 
     }
 
 
-    section#about-me>.conteiner>.quote {
+    section#about-me-section>.conteiner>.quote {
         background-color: rgba(2, 2, 2, 0.281);
         color: white;
         box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.568);
         padding: 5px;
         border-radius: 15px;        
     }
-    section#about-me>.conteiner>.quote p {
+    section#about-me-section>.conteiner>.quote p {
         font-size: 1.5em;
         font-family: 'Courier New', Courier, monospace;
     }
-    section#about-me>.conteiner>.about-me {
+    section#about-me-section>.conteiner>.about-me {
         background-color: rgba(2, 2, 2, 0.281);
         color: white;
         box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.568);
         padding: 5px;
         border-radius: 15px;
     }
-    section#about-me>.conteiner>.about-me h2, p {
+    section#about-me-section>.conteiner>.about-me h2, p {
         font-family: var(--font3);
         line-height: 1.3em;
     }
-    section#about-me>.conteiner P {
+    section#about-me-section>.conteiner P {
         text-indent: 20px;
         line-height: 1.3em;
     }
@@ -98,7 +98,7 @@
 @media screen and (min-width:1500px) {
 
 
-    section#about-me>.conteiner {
+    section#about-me-section>.conteiner {
         width: 100%;
         justify-content: space-between;
         margin: auto;
@@ -109,12 +109,12 @@
         background-attachment: fixed;
     }
    
-    section#about-me>.conteiner>.me-img {
+    section#about-me-section>.conteiner>.me-img {
         text-align: center;
         padding-top: 5em;
         
     }
-    section#about-me>.conteiner>.quote {
+    section#about-me-section>.conteiner>.quote {
         background-color: rgba(2, 2, 2, 0.281);
         color: white;
         box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.568);
@@ -123,11 +123,11 @@
         padding: 1em;
         border-radius: 15px;
     }
-    section#about-me>.conteiner>.quote p {
+    section#about-me-section>.conteiner>.quote p {
         font-size: 1.5em;
         font-family: 'Courier New', Courier, monospace;
     }
-    section#about-me>.conteiner>.about-me {
+    section#about-me-section>.conteiner>.about-me {
         background-color: rgba(2, 2, 2, 0.281);
         color: white;
         box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.568);
@@ -136,11 +136,11 @@
         padding: 1em;
         border-radius: 15px;
     }
-    section#about-me>.conteiner>.about-me h2, p {
+    section#about-me-section>.conteiner>.about-me h2, p {
         font-family: var(--font3);
         
     }
-    section#about-me>.conteiner P {
+    section#about-me-section>.conteiner P {
         text-indent: 20px;
         line-height: 1.5em;
     }
