--- a/assets/styles/menu-bottom.css
+++ b/assets/styles/menu-bottom.css
@@ -9,7 +9,7 @@
 
     #burguer {
         display: block;
-        color: white;
+        color: var(--color3);
         background-color: var(--color1);
         padding: .5em;
         cursor: pointer;
@@ -28,9 +28,9 @@
     #itens a {
 
         display: block;
-        border-top: 1px solid white;
+        border-top: 1px solid var(--color3);
         padding: .5em;
-        color: white;
+        color: var(--color3);
         text-decoration: none;
         
 
@@ -74,14 +74,14 @@
     }
     #itens a{
         padding: 1em;
-        color: white;
+        color: var(--color3);
         text-decoration: none;
         transition: ease .5s;
     }
 
     #itens a:hover {
 
-        background-color: white;
+        background-color: var(--color3);
         color: var(--color1);
         padding: .8em;
         border-radius: 50%;
