--- a/assets/styles/menu-mid.css
+++ b/assets/styles/menu-mid.css
@@ -1,7 +1,7 @@
 
 #menu-middle h2 {
     
-        color: white;
+        color: var(--color3);
         text-shadow: 1px 1px 15px rgb(0, 0, 0);
         
         justify-content: center;
