--- a/assets/styles/root.css
+++ b/assets/styles/root.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 :root{
-    --font1: Verdana, Geneva, Tahoma, sans-serif;
-    --font2: 'Passion One', cursive;
-    --font3: 'Sriracha', cursive;
+    --font1: Verdana, Geneva, monospace, Tahoma, sans-serif;
+    --font2: 'Passion One',monospace, cursive;
+    --font3: 'Sriracha', monospace, cursive;
     --color1: #66218b;
     --color2:#4d1969;
+    --color3:white;
     
 }
