--- a/assets/styles/body.css
+++ b/assets/styles/body.css
@@ -2,6 +2,7 @@
 @import url(object-about-me.css);
 @import url(object-skills.css);
 @import url(object-portfolio.css);
+@import url(object-contact.css);
 
 /*===| Glogal-Body-Settings |===*/
 body,html {
