--- a/assets/styles/menu-top.css
+++ b/assets/styles/menu-top.css
@@ -5,26 +5,38 @@
     }
 }
 /*tablet screen+ version*/
-#menu-top{
-    background-color:var(--color1);
-    padding: 2em;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-}
-#social-menu li{
-    display: inline;
-    margin: 0.5em;
+@media screen and (min-width:768px) {
+    #menu-top{
+        background-color:var(--color1);
+        padding: 2em;
+        display: flex;
+        justify-content: space-between;
+        text-align: center;
+    }
+    #social-menu li{
+        display: inline;
+        margin: 0.5em;
+        transition: ease .2s;
+        
+    }
     
-}
+    #social-menu img:hover{
 
-#social-menu img:hover{
+        
+        padding: 2px;
+        background-color: var(--color2); 
+        color: var(--color3);
+        border-radius: 10px;
+        box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.384);
+        transition: ease .1s;
+
+        
+        
+    }
+    #contato li{
+        display: inline;
+        font-size: 1.5em;
+    }
     
-    border-radius: 10px;
-    border: 3px solid var(--color1);
     
-}
-#contato li{
-    display: inline;
-    font-size: 1.5em;
 }
