--- a/assets/styles/object-portfolio.css
+++ b/assets/styles/object-portfolio.css
@@ -1,10 +1,27 @@
-@media screen and (max-width:768px) {
-    section#object-portfolio {
-        display: flex;
-        flex-wrap: wrap;
-        margin: auto;
-        padding: 20px;
-        justify-items: center;
-    }
+
+section#object-portfolio{
+    display: flex;
+    background-image: url(../Imagens/pngtree-climber-and-purple-mountain-background-image_389792.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
+section#object-portfolio  #conteiner {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+  
+    
+    
+    border: 1px solid black;
+
+}
+section#object-portfolio .box{
+    height: 150px;
+    width: 150px;
+    margin: 5px;
+    border: 1px solid black;
+    background-color: white;
+}
+
 
